--- a/conf/logging.conf
+++ b/conf/logging.conf
@@ -12,7 +12,7 @@ keys: root,gui,engine
 format: %(name)s:%(levelname)s:  %(message)s
  
 [formatter_detailed]
-format: %(name)s:%(levelname)s %(asctime)s %(module)s:%(lineno)d:  %(message)s
+format: %(name)s:%(levelname)s %(asctime)s %(module)s:%(lineno)d: %(message)s
  
 [handler_console]
 class: StreamHandler
@@ -26,9 +26,8 @@ formatter: simple
  
 [handler_logfile]
 class: FileHandler
-args: [('logs/subwayTweets.log')]
+args: [('logs/subway.log')]
 formatter: detailed
-
 
 [logger_root]
 level: INFO
